--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
   sdk: '>=2.0.0-dev.28.0 <3.0.0'
 
 dependencies:
-  meta: ">=1.1.2 <2.0.0"
-  http: ">=0.12.0 <0.13.0"
+  meta: ^1.3.0
+  http: ^0.13.3
 
 dev_dependencies:
-  test: ^1.5.0
-  mockito: ^4.0.0
-  coverage: ">=0.12.0 <0.13.0"
-  pedantic: "1.4.0"
+  test: ^1.17.3
+  mockito: ^5.0.7
+  coverage: ^1.0.2
+  pedantic: ^1.11.0
